# FireUpPy

./: README.md
python/: Makefile  README.org  dev_requirements.txt  pyproject.toml  pytest.ini  requirements.txt  venv_requirements.txt
python/cif/: api.py  base_stop_words.txt  catalog.py  clients.py  connector.py  disaggregation.py  extractor.py  factory.py  ingestion.py  intake.py  main.py  middleware.py  persistence.py  util.py  worker.py
python/tests/: artifact.txt  conftest.py  get_blob_metadata.json  list_blobs.json  list_blobs2.json  test_api.py  test_catalog.py  test_clients.py  test_connector.py  test_disaggregation.py  test_extractor.py  test_factory.py  test_ingestion.py  test_intake.py  test_main.py  test_util.py  test_worker.py
